--- a/public/sass/_layout.scss
+++ b/public/sass/_layout.scss
@@ -18,3 +18,14 @@ $L:     1170px;
   }
 }
 
+.bold {
+	font-weight: bold;
+}
+
+.valign{
+	position: relative;
+	top: 50%;
+	@include transform(translateY(-50%));
+	@include font-smoothing;
+}
+
