--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -5,6 +5,7 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
 // @import "animate";
+@import "animate";
 @import '../bourbon/bourbon'; // http://bourbon.io/
 @import 'variables'; // colors, fonts etc...
 @import 'mixins'; // custom mixins
