--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -2,7 +2,7 @@
 @import "compass/reset";
 @import "bootstrap";
 
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(//fonts.googleapis.com/css?family=Montserrat:400,700);
 
 // @import "animate";
 @import "animate";
@@ -67,7 +67,9 @@ Main Components
 #username{
 	margin: 50px auto;
 	display: block;
-	background: darken($color-1, 3%);
+	//background: darken($color-1, 3%);
+	background: #fff;
+	color: $color-1;
 	border: none;
 	height: 60px;
 	width: 100%;
@@ -172,7 +174,9 @@ Main Components
 	
 	.cd-section:first-of-type & {
 		height: 100vh;
-		background-color: $color-1;
+		// background-color: $color-1;
+		background-image: url('../img/bg-2.jpg');
+		background-size: cover;
 	}
 
 	@include MQ(L) {
@@ -196,6 +200,20 @@ Main Components
 	} 
 }
 
+.icon{
+	font-size: 48px;
+	position: absolute;
+	top: 25%;
+	width: 100%;
+	text-align: center;
+	.fa-heart{
+		color: #e74c3c;
+	}
+	.fa-retweet{
+		color: $color-2;
+	}
+}
+
 .cd-half-block {
 	background: $color-3;
 	color: $color-1;
@@ -206,13 +224,14 @@ Main Components
 		background-repeat: no-repeat;
 	}
 
-	&:nth-of-type(2) {
-		padding: 4em 10%;
-	}
-
 	p {
 		font-size: 1.8rem;
-		line-height: 1.8;
+		line-height: 1.2;
+		color: #888;
+		span{
+			color: $color-1;
+			font-weight: bold;
+		}
 	}
 
 	.cd-section:nth-of-type(2) &:first-of-type {
@@ -220,7 +239,8 @@ Main Components
 	}
 
 	.cd-section:nth-of-type(3) &:first-of-type {
-		background: #f7f7f7;
+		background-image: url('../img/bg-1.jpg');
+		background-size: cover;
 	}
 
 	.cd-section:nth-of-type(4) &:first-of-type {
@@ -237,7 +257,7 @@ Main Components
 			position: absolute;
 			@include center;
 			width: 100%;
-			padding: 0 30%;
+			padding: 0 15%;
 			font-size: 2.4rem;
 		}
 
