--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -127,6 +127,12 @@ Main Components
 	color: $error;
 }
 
+#chartContainer {
+	height: 300px;
+	width: 80%;
+	padding: 0 10%;
+}
+
 #profil {
 	position: fixed;
 	top: 20px;
@@ -203,7 +209,7 @@ Main Components
 .icon{
 	font-size: 48px;
 	position: absolute;
-	top: 25%;
+	top: 20%;
 	width: 100%;
 	text-align: center;
 	.fa-heart{
@@ -211,6 +217,9 @@ Main Components
 	}
 	.fa-retweet{
 		color: $color-2;
+	}
+	.fa-moon-o{
+		color: #fff;
 	}
 }
 
@@ -243,8 +252,8 @@ Main Components
 		background-size: cover;
 	}
 
-	.cd-section:nth-of-type(4) &:first-of-type {
-		background: #f7f7f7;
+	.cd-section:nth-of-type(4) &:nth-of-type(2) {
+		background: #111;
 	}
 
 	@include MQ(L) {
@@ -259,6 +268,18 @@ Main Components
 			width: 100%;
 			padding: 0 15%;
 			font-size: 2.4rem;
+		}
+
+		h2 {
+			position: absolute;
+			@include center;
+			width: 100%;
+			padding: 0 15%;
+			font-size: 10rem;
+			text-align: center;
+			&.light {
+				color: #fff;
+			}
 		}
 
 		.cd-section:nth-of-type(even) &:first-of-type,
